2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* console-ncurses.c: File removed (the ncursesw console client is
	now a driver in the console-client).
	* Makefile: Revert 2002-08-22 change:
	Do not include`../config.make'.
	(targets) [LIBNCURSES]: Removed.
	(SRCS) [LIBNCURSES]: Likewise.
	(HURDLIBS) [LIBNCURSES]: Likewise.
	(console-ncurses): Target removed.
	(console-ncurses-CPPFLAGS): Removed.
	(console-ncurses-LDLIBS): Likewise.

2002-09-09  Marcus Brinkmann  <marcus@gnu.org>

	* console-ncurses.c (cons_vcons_set_scroll_lock): New function.
	
	* console-ncurses.c (console_switch): Keep a reference to the port
	instead refering to it by number.
	
	* console-ncurses.c: New global variable global_lock.
	(main): Initialize global_lock.
	(cons_vcons_activate): Removed.
	(console_switch): New function.
	(cons_vcons_add): New function.
	(input_loop): Call console_switch, not cons_switch.  Do not take
	active_vcons lock but global_lock.
	(cons_vcons_update): Take global lock.
	(cons_vcons_set_cursor_pos): Likewise.
	(cons_vcons_set_cursor_status): Likewise.
	(cons_vcons_scroll): Likewise.
	(cons_vcons_write): Likewise.
	(cons_vcons_beep): Likewise.
	(cons_vcons_flash): Likewise.

2002-08-29  Marcus Brinkmann  <marcus@gnu.org>

	* console-ncurses.c (main): Call endwin () before bailing out
	because of an error.
	(cons_vcons_write): Use getyx and wmove on stdscr instead getsyx
	and setsyx (which operate on newscr, and mess up the cursor
	anyway, probably because we don't commit the change immediately).
	Submitted by David Walter <dwalter@syr.edu>.

2002-08-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile: Include `../config.make' early on to get LIBNCURSESW
	variable from configure before including Makeconf.
	(targets) [LIBNCURSES]: Add console-ncurses.
	(SRCS) [LIBNCURSES]: Add console-ncurses.c.
	(HURDLIBS) [LIBNCURSES]: Add cons.
	(console-ncurses): New target.
	(console-ncurses-CPPFLAGS): New variable.
	(console-ncurses-LDLIBS): Likewise.
